--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Project Tasks List was bootstrapped with Create React App. You can get example tasks, create your own, and filter the search phrase. By using bottoms you can hide done tasks, and make all tasks to done."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
